# Strata

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  package.json
.github/workflows/: ci.yml  eslint.yml
contrib/systemd/: strata-daemon.service
strata-daemon/: Cargo.toml  README.md
strata-daemon/src/: config.rs  db.rs  dbus_service.rs  main.rs
strata-daemon/src/clipboard/: monitor.rs  writer.rs
strata@edu4rdshl.dev/: README.md  dbus.js  extension.js  light.css  metadata.json  prefs.js  stylesheet.css  util.js
strata@edu4rdshl.dev/schemas/: org.gnome.shell.extensions.strata.gschema.xml
strata@edu4rdshl.dev/ui/: clipboardItem.js  panel.js
