[package]
name        = "strata-daemon"
version     = "0.8.0"
edition     = "2021"
description = "Strata clipboard manager backend daemon"

[[bin]]
name = "strata-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio              = { version = "1",    features = ["full"] }

# D-Bus (async, tokio-native)
zbus               = { version = "5",    features = ["tokio"] }

# Wayland clipboard monitoring (custom event loop)
wayland-client     = "0.31"
wayland-protocols  = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Clipboard read / write (paste::get_contents + copy::copy_multi)
# Supports ext-data-control-v1 (GNOME 47+) and zwlr-data-control-v1 fallback
wl-clipboard-rs    = "0.9"

# Storage
rusqlite           = { version = "0.40", features = ["bundled"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1",    features = ["v4"] }

# Image thumbnail generation (runs in spawn_blocking — never blocks async runtime)
image              = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico"] }

# Fast content hashing for deduplication
blake3             = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# XDG paths
dirs               = "6"

# Error handling
anyhow             = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
